# buscaimoveis

./: 404.html  README.md  index.html
.github/workflows/: main.yml
docs/: .c4builder  README.md  mkdocs.yml  pyproject.toml
docs/assets/diagrams/: context.puml
docs/assets/diagrams/buscaimoveis/single-page-application/: container.puml
docs/src/: index.md
docs/src/2 Busca Imoveis/: system.puml
search/: search_index.json
