[tool.poetry]
name = "buscaimoveis-docs"
version = "0.1.0"
description = "Documentacao do projeto Busca Imoveis"
authors = ["Gilson Filho <me@gilsondev.in>"]

[tool.poetry.dependencies]
python = "3.9"
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
